Bluewolf SFMTA/src/objects/Stops__c.object
<CustomObject>
    <fields>
        <fullName>Arterial__c</fullName>
        <label>Arterial</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bus_Zone__c</fullName>
        <label>Bus Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Muni Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peak Extension Zone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <label>Creation Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Stop__c</fullName>
        <label>Current Stop</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Label_Placement__c</fullName>
        <label>Label Placement</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Pole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter (old)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Landor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landor (vandalized)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter + Landor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Number_of_Parking_Spaces__c</fullName>
        <label>Number of Parking Spaces</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pilot_Stop__c</fullName>
        <label>Pilot Stop</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>Farside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nearside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-block</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STL_Cross_Street_2__c</fullName>
        <label>Cross Street 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_ID__c</fullName>
        <label>Stop ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Stops_per_Day__c</fullName>
        <description>How many total stop events are scheduled to occur across all shuttles and locations</description>
        <inlineHelpText>How many total stop events are scheduled to occur across all shuttles and locations</inlineHelpText>
        <label>Total Stops per Day</label>
        <summarizedField>Stop_Junction__c.Stops_per_Month__c</summarizedField>
        <summaryForeignKey>Stop_Junction__c.Stop__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zone_Hours__c</fullName>
        <label>Zone Hours</label>
        <picklist>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Stop</label>
    <listViews>
        <fullName>All_Stops</fullName>
        <columns>NAME</columns>
        <columns>Stop_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Arterial__c</columns>
        <columns>Bus_Zone__c</columns>
        <columns>Length__c</columns>
        <columns>Zone_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Stops</label>
    </listViews>
    <nameField>
        <label>Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>